# betabox_robotics

./: .gitignore  CHANGELOG.md  Custom_Functions.txt  README.md  __init__.py  car.py  exceptions.py  pyproject.toml  requirements.txt  robot.py
audio/: __init__.py  amplifier.py  audio.py  exceptions.py  pronunciation.py  quiet.py  tones.py
audio/speech/: __init__.py  base.py  espeak_ng.py  factory.py  pico.py  piper.py
calibration/: __init__.py  manager.py  models.py  storage.py
camera/: __init__.py  exceptions.py  mount.py
cli/: __init__.py  betabox.py
config/: __init__.py  platform.py
deployment/: __init__.py  bootstrap.sh  install.sh
deployment/jupyterhub/: jupyterhub_config.py  requirements.txt
deployment/provision/: __init__.py  __main__.py  accounts.py  media.py  models.py  (+3 more)
docs/: api.md  architecture.md  audio.md  betabox_robot_api_reference.md  changelog.md  deployment.md  design_principles.md  drive.md  hardware.md  roadmap.md  sensors.md  system.md  vision.md
drive/: __init__.py  drive.py  exceptions.py
hardware/: __init__.py  adc.py  board.py  exceptions.py  gpio.py  i2c.py  motor.py  ownership.py  pin.py  pwm.py  servo.py
launchpad/: __init__.py  app.py  components.py  drive_controller.py  layout.py  permissions.py  services.py  status_cache.py
platform/: verify.py
robots/: __init__.py  base.py  betabox_car.py  capabilities.py  car.py  config.py  exceptions.py  health.py  robot.py
sensors/: __init__.py  battery.py  exceptions.py  grayscale.py  sensors.py  types.py  ultrasonic.py
services/: __init__.py  backup.py  boot_announce.py  calibration.py  doctor.py  events.py  guest.py  hardware_status.py  hostname.py  http_health.py  identity.py  install_check.py  logs.py  managed.py  monitor.py  platform_information.py  platform_summary.py  reset.py  restore.py  services.py  snapshot.py  status.py  system_health.py  verify.py  video.py  wifi_fallback.py  workspace.py
system/: __init__.py  system.py
vision/: __init__.py  camera.py  client.py  consumer.py  detection.py  detector.py  frame.py  frame_source.py  interfaces.py  metadata.py  metadata_bus.py  model_runtime.py  overlay.py  recording.py  service.py  signaling.py  snapshot.py  stream.py  tflite_runtime.py  vision.py  webrtc.py
(+196 files in other folders)
