[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "betabox_robotics"
version = "0.1.0"
description = "Betabox Robotics SDK"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
{ name = "Betabox Learning" }
]

keywords = [
"robotics",
"raspberry-pi",
"education",
"robot",
"stem",
]

classifiers = [
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.11",
"Operating System :: POSIX :: Linux",
"License :: OSI Approved :: MIT License",
]

dependencies = [
"aiohttp",
"aiortc",
"gpiozero",
"smbus2",
"aiohttp-jinja2",
]

[project.scripts]
betabox = "betabox_robotics.cli.betabox:main"

[project.urls]
Homepage = "https://github.com/justinbetabox/betabox_robotics"

[tool.setuptools]
include-package-data = true
package-dir = { "betabox_robotics" = "." }
packages = ["betabox_robotics"]

[tool.setuptools.package-data]
betabox_robotics = [
"audio/models/**/*",
"vision/models/**/*",
]
